<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_page_1"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/spy_who_loved_me_roger_image"
        tools:layout_editor_absoluteY="43dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="45dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="294dp"
        tools:layout_editor_absoluteX="0dp"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/image_page_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/button">
        <RadioGroup
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/radio_group1">

            <RadioButton
                android:id="@+id/radio_button_1"
                style="@style/RadioButtonCustomStyle"
                android:text="@string/movie_1_live_and_let_die" />

            <RadioButton
                android:id="@+id/radio_button_2"
                style="@style/RadioButtonCustomStyle"
                android:text="@string/movie_2_The_Man_with_the_golden_gun" />
        </RadioGroup>
        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:id="@+id/radio_group2">

            <RadioButton
                android:id="@+id/radio_button_3"
                style="@style/RadioButtonCustomStyle"
                android:text="@string/movie_3_The_Spy_Who_Loved_Me" />

            <RadioButton
                android:id="@+id/radio_button_4"
                style="@style/RadioButtonCustomStyle"
                android:text="@string/movie_4_Moonraker" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="148dp"
        android:layout_marginStart="148dp"
        android:onClick="goToPageForth"
        android:text="@string/button_text_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>