<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.prusp.quizappforudacity.MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome_text"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/start_quiz_button"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginTop="100dp" />

    <Button
        android:id="@+id/start_quiz_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="34dp"
        android:layout_marginEnd="138dp"
        android:layout_marginStart="139dp"
        android:elevation="10dp"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="startQuiz"
        android:text="@string/let_s_start"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="139dp"
        tools:layout_editor_absoluteY="429dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="215dp"
        android:layout_height="92dp"
        android:text="@string/quiz_description"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="137dp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="354dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="178dp"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
</android.support.constraint.ConstraintLayout>
